--- a/src/pages/MeasurementsPage/MeasurementsForm/MeasurementInputs/input.css
+++ b/src/pages/MeasurementsPage/MeasurementsForm/MeasurementInputs/input.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: dashed;
 }
 
 .range-container {
@@ -18,5 +17,9 @@
 }
 
 .hint {
-  font-size: .875rem;
+  font-size: 0.875rem;
+}
+
+.text-input {
+  color: black;
 }
