--- a/src/pages/MeasurementsPage/MeasurementsForm/image.css
+++ b/src/pages/MeasurementsPage/MeasurementsForm/image.css
@@ -12,3 +12,9 @@
   flex-direction: column;
   align-items: center;
 }
+
+.measure-card-header {
+  display: flex;
+  justify-content: center;
+  color: black;
+}
