--- a/src/pages/MeasurementsPage/NewMeasurements/measurements-form.css
+++ b/src/pages/MeasurementsPage/NewMeasurements/measurements-form.css
@@ -23,7 +23,9 @@
 }
 
 .card {
-  height: 85vh;
+  margin: 2rem auto;
+  height: calc(100% - 4rem);
+  max-width: calc(min(400px, 100% - 4rem));
 }
 
 .review-value {
@@ -63,11 +65,13 @@
 }
 
 .review-results-container {
-  height: 100%;
   overflow-y: scroll;
 }
 
 .submit-button-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  margin: 0 auto;
+  flex-grow: 1;
 }
