--- a/src/pages/DevicesPage/GenerateDeviceStls/export-device-progress.css
+++ b/src/pages/DevicesPage/GenerateDeviceStls/export-device-progress.css
@@ -1,46 +1,51 @@
 .center {
-    /*margin-top: 10rem;*/
-    padding: 0 4rem;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  /*margin-top: 10rem;*/
+  padding: 0 4rem;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .center ion-button {
-    margin-top: 3rem;
+  margin-top: 3rem;
 }
 
 .grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 3rem;
-    /*width: 100%;*/
-    flex: 1;
-    margin: 0 auto 2rem;
-    overflow: hidden;
-    overflow-y: scroll;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 3rem;
+  /*width: 100%;*/
+  flex: 1;
+  margin: 0 auto 2rem;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
 .card-container {
-    margin: 10px;
+  margin: 10px;
 }
 
 ion-card {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    padding: 0 .5rem;
-    background-image: linear-gradient(to right, var(--tint) 0%, var(--tint) 16%, var(--ion-color-light) 26%);
-    margin: 0;
-    height: 100%;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 0 0.5rem;
+  background-image: linear-gradient(
+    to right,
+    var(--tint) 0%,
+    var(--tint) 16%,
+    var(--ion-color-light) 26%
+  );
+  margin: 0;
+  height: 100%;
 }
 
 ion-icon {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 ion-progress-bar {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
