--- a/src/pages/ProfilePage/ProfileList/profile-list.scss
+++ b/src/pages/ProfilePage/ProfileList/profile-list.scss
@@ -1,5 +1,5 @@
 .people-header {
-  background-color: rgb(132, 132, 255);
+  background-color: var(--ion-color-tertiary);
   color: white;
   height: 22vh;
 }
@@ -51,12 +51,12 @@
 }
 
 .profile-list-item {
-  background-color: rgb(220, 245, 253) !important;
+  background-color: var(--ion-color-tertiary-tint);
   display: flex;
   flex-direction: row;
+  align-items: center;
   margin-top: 10px;
-  margin-bottom: 10px;
-  height: 120px;
+  height: 100px;
   width: 100%;
   border-radius: 10px;
 }
@@ -65,6 +65,7 @@
   height: 100px;
   width: 100px;
   padding: 10px;
+  display: flex;
 }
 
 .profile-info {
@@ -85,10 +86,18 @@
 
 .add-new-person {
   border: solid 1px lightgrey;
-  padding: 5px;
   position: fixed;
-  bottom: 10px;
+  bottom: 2px;
   right: 10px;
   border-radius: 15px;
   box-shadow: 5px 5px 5px lightgrey;
+  color: black !important;
+}
+
+.list-container {
+  margin-bottom: 120px;
+}
+
+.list-spacer {
+  height: 50px;
 }
