--- a/src/pages/ProfilePage/ProfileDetails/profile-details.scss
+++ b/src/pages/ProfilePage/ProfileDetails/profile-details.scss
@@ -38,3 +38,14 @@
   display: flex;
   flex-direction: column;
 }
+
+.profile-item-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.card-details {
+  width: 65%;
+  margin: 10px;
+}
