--- a/src/pages/ProfilePage/ProfileDetails/profile-details.scss
+++ b/src/pages/ProfilePage/ProfileDetails/profile-details.scss
@@ -23,6 +23,15 @@
 
 .info-text {
 }
+.detail-title {
+  margin: 5px;
+  font-weight: 500;
+}
+
+.detail-text {
+  font-weight: 300;
+  margin: 0px 2px 0px 2px;
+}
 
 .profile-item-header {
   font-weight: bold;
@@ -45,7 +54,21 @@
   justify-content: space-between;
 }
 
+.item-image {
+  margin: 5px;
+  border: dashed;
+  height: 60px;
+  width: 60px;
+}
+
+.item-date {
+  margin-top: 15px;
+  margin-right: 5px;
+  font-weight: 300;
+  font-size: 14px;
+}
+
 .card-details {
-  width: 65%;
+  width: 55%;
   margin: 10px;
 }
