--- a/src/pages/ProfilePage/ProfileList/profile-list.scss
+++ b/src/pages/ProfilePage/ProfileList/profile-list.scss
@@ -1,7 +1,9 @@
 .people-header {
   background-color: var(--ion-color-tertiary);
   color: white;
-  height: 22vh;
+  display: flex;
+
+  flex-direction: column;
 }
 
 .home-container {
@@ -20,6 +22,7 @@
 .header-items {
   margin: 10px;
   margin-top: 15px;
+  margin-bottom: 0;
 }
 
 .header-text {
@@ -39,6 +42,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 10px;
+  font-size: 1.375rem;
 }
 
 .sort-filter-item {
