updated the printDevice pages and made the header take a title argument

--- a/src/pages/PrintDevice/print-device.scss
+++ b/src/pages/PrintDevice/print-device.scss
@@ -1,24 +1,31 @@
-.card {
-  border: dashed;
-  width: 100% !important;
-}
+// .card {
+//   border: dashed;
+//   width: 100% !important;
+//}
 
 .print-device-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
 
-.print-device-profile-card {
-  height: 100%;
-  width: 100%;
-  padding: 0px !important;
-  margin: 0px !important;
-  display: flex;
-  flex-direction: column;
-}
+  .print-device-profile-card {
+    height: 100%;
+    width: 100%;
+    padding: 0px !important;
+    margin: 0px !important;
+    display: flex;
+    flex-direction: column;
+  }
 
-.print-device-profile-header {
-  padding: 0px 20px 0px 20px;
-  font-weight: 900;
+  .print-device-profile-header {
+    padding: 0;
+    margin: 0;
+    font-weight: 900;
+    position: sticky;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    z-index: 1000;
+    background-color: var(--ion-background-color);
+  }
 }
