--- a/src/pages/LandingPage/landing-base.scss
+++ b/src/pages/LandingPage/landing-base.scss
@@ -1,37 +1,42 @@
-.list-container {
-}
+.landing-base__ {
+  .list {
+    display: "flex";
+    flex-direction: "column";
+    justify-content: "center";
+  }
 
-.landing-card {
-  background-color: var(--ion-color-tertiary-tint);
-  min-height: 50px;
-  min-width: 100%;
-  margin-top: 10px;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
+  .landing-card {
+    background-color: var(--ion-color-tertiary-tint);
+    min-height: 50px;
+    min-width: 100%;
+    margin-top: 10px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
 
-.icon-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 55px;
-  width: 55px;
-  margin: 10px;
-}
+  .icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 55px;
+    width: 55px;
+    margin: 10px;
+  }
 
-.icon {
-  height: 80%;
-  width: 80%;
-}
+  .icon {
+    height: 80%;
+    width: 80%;
+  }
 
-.card-header-text {
-  font-weight: bold;
-  margin-bottom: 5px;
-}
+  .card-header-text {
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
 
-.card-body-text {
-  font-weight: lighter;
-  font-size: smaller;
+  .card-body-text {
+    font-weight: lighter;
+    font-size: smaller;
+  }
 }
