--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -37,9 +37,11 @@
   }
   .subtitle {
     font-size: x-large;
-    padding-bottom: 0.5rem;
-    color: var(--ion-color-tertiary-contrast);
+    font-weight: bold;
+    padding: 0.5rem;
+    color: black;
     padding-left: 0.5rem;
+    background-color: white;
   }
   .button {
     color: var(--ion-color-tertiary-contrast);
