Fix Shadow Dom bug

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,11 @@
 .header-small__ {
   background-color: var(--ion-color-tertiary);
+
+  ion-toolbar,
+  ion-header {
+    --background: var(--ion-color-tertiary);
+  }
+
   .title {
     font-size: large;
     background-color: var(--ion-color-tertiary);
@@ -20,6 +26,12 @@
 
 .header-big__ {
   background-color: var(--ion-color-tertiary);
+
+  ion-toolbar,
+  ion-header {
+    --background: var(--ion-color-tertiary);
+  }
+
   .title {
     font-size: x-large;
     background-color: var(--ion-color-tertiary);
@@ -60,6 +72,12 @@
 
 .header-landing__ {
   background-color: var(--ion-color-tertiary);
+
+  ion-toolbar,
+  ion-header {
+    --background: var(--ion-color-tertiary);
+  }
+
   .title {
     font-size: x-large;
     background-color: var(--ion-color-tertiary);
