--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -32,6 +32,15 @@
     --background: var(--ion-color-tertiary);
   }
 
+  ion-searchbar {
+    input {
+      --background: var(
+        --ion-item-background,
+        var(--ion-background-color, #fff)
+      );
+    }
+  }
+
   .title {
     font-size: x-large;
     background-color: var(--ion-color-tertiary);
