--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,35 +1,50 @@
 .header-big__ {
   .sort-filter-row {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 10px;
-    font-size: 1.375rem;
+    margin-bottom: 16px;
   }
 
   .sort-filter-item {
+    margin-top: 8px;
     display: flex;
-    flex-direction: row;
     align-items: center;
-    color: var(--ion-color-tertiary-contrast);
+    gap: 0.5rem;
+    color: var(--ion-color-primary-contrast);
   }
 }
 
 ion-toolbar {
   .button {
-    color: var(--ion-color-tertiary-contrast);
+    color: var(--ion-color-primary-contrast);
   }
 
-  h1,
-  h2 {
-    padding: 0 1rem;
+  .header-text {
+    margin-top: 2rem;
   }
 
-  color: var(--ion-color-tertiary-contrast);
-  --background: var(--ion-color-tertiary);
+  h1 {
+    margin-bottom: 4px;
+  }
+
+  .header-text,
+  .sort-filter-row {
+    .md & {
+      padding: 0 7px;
+    }
+
+    .ios & {
+      padding: 0 12px;
+    }
+  }
+
+  color: var(--ion-color-primary-contrast);
+  --background: var(--ion-color-primary);
 
   ion-searchbar {
+    margin-top: 10px;
+    padding-bottom: 8px;
     input {
       --background: var(
         --ion-item-background,
