--- a/src/pages/ProfilePage/ProfileDetails/profile-details.scss
+++ b/src/pages/ProfilePage/ProfileDetails/profile-details.scss
@@ -1,12 +1,26 @@
 .profile-details__ {
+  h2 {
+    margin: 10px;
+  }
+
+  .divider {
+    height: 1px;
+    background: var(--ion-color-light);
+    margin: 16px;
+  }
+
   .profile-info-container {
     display: flex;
   }
 
   .profile-image {
-    height: 140px;
-    width: 140px;
-    margin: 15px;
+    ion-img {
+      height: 140px;
+      width: 140px;
+      margin: 15px;
+      border-radius: 100%;
+      overflow: hidden;
+    }
   }
 
   .info-container {
