--- a/src/theme/design-system.scss
+++ b/src/theme/design-system.scss
@@ -13,28 +13,62 @@
 }
 
 h1 {
-  font-family: Open Sans, sans-serif !important;
-  font-style: normal !important;
   font-weight: bold !important;
   font-size: 28px !important;
   line-height: 38px !important;
   letter-spacing: -0.408px !important;
+  margin: 0;
 }
 
 h2 {
-  font-family: Open Sans, sans-serif !important;
-  font-style: normal !important;
   font-weight: 600 !important;
   font-size: 20px !important;
   line-height: 27px !important;
   letter-spacing: -0.408px !important;
+  margin: 0;
 }
 
 h3 {
-  font-family: Open Sans, sans-serif !important;
-  font-style: normal !important;
-  font-weight: normal !important;
   font-size: 20px !important;
   line-height: 27px !important;
   letter-spacing: -0.408px !important;
+  margin: 0;
+}
+
+h4 {
+  color: var(--ion-color-medium);
+  font-size: 14px !important;
+  line-height: 22px !important;
+  margin: 0;
+}
+
+p.body-large {
+  margin: 0;
+  font-weight: bold !important;
+  font-size: 16px !important;
+  line-height: 22px !important;
+}
+
+p.body-medium {
+  margin: 0;
+  font-size: 16px !important;
+  line-height: 22px !important;
+}
+
+p.body-small {
+  margin: 0;
+  font-size: 14px !important;
+  line-height: 22px !important;
+}
+
+p.info {
+  color: var(--ion-color-medium);
+  margin: 0;
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  //text-align: center !important;
+  letter-spacing: -0.408px !important;
+  text-transform: uppercase !important;
 }
