--- a/src/pages/PrintDevice/print-device.scss
+++ b/src/pages/PrintDevice/print-device.scss
@@ -9,4 +9,14 @@
     border: dashed;
     height: 150px;
   }
+
+  .device-next-button-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .device-next-button {
+    width: 80%;
+  }
 }
