--- a/src/pages/ProfilePage/ProfileDetails/profile-details.scss
+++ b/src/pages/ProfilePage/ProfileDetails/profile-details.scss
@@ -3,6 +3,10 @@
     margin: 10px;
   }
 
+  ion-list {
+    margin: 16px;
+  }
+
   .divider {
     height: 1px;
     background: var(--ion-color-light);
