--- a/src/pages/MeasurementsPage/MeasurementSetDetails/measurement-set-details.scss
+++ b/src/pages/MeasurementsPage/MeasurementSetDetails/measurement-set-details.scss
@@ -1,9 +1,17 @@
-.titlez {
-  font-weight: bold;
-  font-size: 20px;
-  margin-left: 10px;
-}
+.measurement-set-details-container {
+  padding: 16px;
 
-.measurement-set-items-container {
-  margin: 10px 2px 5px 2px;
+  ion-grid {
+    margin-top: 20px;
+    padding: 0;
+  }
+
+  ion-col {
+    padding: 0;
+  }
+
+  .view-all {
+    display: flex;
+    justify-content: end;
+  }
 }
