--- a/src/components/device-item/device-item.scss
+++ b/src/components/device-item/device-item.scss
@@ -4,7 +4,8 @@
   justify-content: space-between;
   margin: 5px 10px 0px 10px;
   border-radius: 5px;
-  background-color: var(--ion-color-tertiary-tint);
+  background-color: white;
+  color: black;
 }
 
 .item-image {
