--- a/src/components/measurement-item/measurement-item.scss
+++ b/src/components/measurement-item/measurement-item.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   margin: 5px 10px 0px 10px;
   border-radius: 5px;
-  background-color: var(--ion-color-tertiary-tint);
+  background-color: var(--ion-color-primary);
 }
 
 .item-image {
