--- a/src/pages/ProfilePage/ProfileList/profile-list.scss
+++ b/src/pages/ProfilePage/ProfileList/profile-list.scss
@@ -1,6 +1,6 @@
 .profile-list__ {
   .people-header {
-    background-color: var(--ion-color-tertiary);
+    background-color: var(--ion-color-primary);
     color: white;
     display: flex;
     flex-direction: column;
