--- a/src/pages/ProfilePage/ProfileDetails/profile-details.scss
+++ b/src/pages/ProfilePage/ProfileDetails/profile-details.scss
@@ -1,16 +1,16 @@
 .profile-details__ {
-  h2 {
-    margin: 10px;
+  & > div {
+    padding: 16px;
   }
 
-  ion-list {
-    margin: 16px;
+  h2 {
+    margin: 10px 0;
   }
 
   .divider {
     height: 1px;
     background: var(--ion-color-light);
-    margin: 16px;
+    margin: 1rem 0;
   }
 
   .profile-info-container {
@@ -21,14 +21,13 @@
     ion-img {
       height: 140px;
       width: 140px;
-      margin: 15px;
+      margin: 0 1rem 1rem 0;
       border-radius: 100%;
       overflow: hidden;
     }
   }
 
   .info-container {
-    margin: 26px 10px 15px 0px;
     width: 60%;
   }
 
@@ -55,9 +54,8 @@
     font-size: 24px !important;
   }
 
-  .profile-item-button {
-    width: 95%;
-    margin: 10px 10px 0px 10px;
+  ion-button {
+    margin: 0;
   }
 
   .items-container {
